web/src/modules/products/components/ProductCard.css
/* ... */
.price-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.original-price {
  text-decoration: line-through;
  color: #999;
  font-size: 0.9rem;
  margin-right: 8px;
}

.discounted-price {
  color: #e74c3c;
}

/* Handmade theme discounted price */
.handmade-theme .discounted-price {
  color: var(--secondary-color);
}

@media (max-width: 768px) {
  .priceAndRaiting {
    display: flex;
    gap: 20%;
  }
  .product-card {
    max-width: 50%;
  }
}
@media (max-width: 634px) {
  .product-card {
    width: 80vw;
    min-width: 250px;
    max-width: 100%;
    margin: 0 auto;
  }
}

